# netgame

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  game.sln  imgui.vcxproj  imgui.vcxproj.filters  netgame.code-workspace  opencltest.code-workspace  opencltest.sln  runCMake_windows_debug.sh  sublimeproject.sublime-workspace  triangleClosestPoint.gh
.cmake/api/v1/reply/: cache-v2-464db9ac11d6c81261ef.json  cmakeFiles-v1-43e667d637907c4a0281.json  codemodel-v2-c9988814e2bfa44192ad.json  directory-opencltest-MinSizeRel-970b1c6455a137cfe3db.json  directory-zlib-Debug-22271028db91a8f68f58.json  directory-zlib-MinSizeRel-0e5ae0040368d4627f42.json  directory-zlib-RelWithDebInfo-73658c0f2056440b98a4.json  directory-zlib-Release-1f582a3e33be18f69849.json  index-2022-08-30T16-59-17-0680.json  target-ALL_BUILD-MinSizeRel-ff4728be973fb8c3388d.json  target-ALL_BUILD-RelWithDebInfo-d554f996efcd291f8c8f.json  target-ALL_BUILD-Release-0bb5748812d91e05b287.json  target-MinerTycoon-Debug-e78b02ce5a7331261a7c.json  target-MinerTycoon-MinSizeRel-e6c19f239898898a93cf.json  target-MinerTycoon-RelWithDebInfo-46db169771dae470bee2.json  target-MinerTycoon-Release-98eca709f4517ec85027.json  target-SLikeNet-RelWithDebInfo-385780377f0bc2c673b4.json  target-ZERO_CHECK-Debug-d66aacf53c8eac0b3651.json  target-example-Debug-21823a0d47a08a57936d.json  target-example-MinSizeRel-d16afa0b2ad19acb02ba.json  target-example-RelWithDebInfo-99ad38a3e11a0ad55652.json  target-example-Release-8075e6505d4007a8ecc1.json  target-imgui-Debug-2303be571e4408bd81e8.json  target-imgui-MinSizeRel-e97448c7bf9eec699fbf.json  target-imgui-RelWithDebInfo-0eabf074c331af0c0970.json  target-imgui-Release-429ced79d1eea89ce799.json  target-minigzip-Debug-7edd9dc79a76de5b1ffd.json  target-minigzip-MinSizeRel-a211f4aa967b9ff21900.json  target-minigzip-RelWithDebInfo-571fe9b6e6b907667ec1.json  target-minigzip-Release-2d9d17c9fdbf95ee7ef8.json  target-zlib-Debug-f866013971da3bcfc265.json  target-zlib-MinSizeRel-e0a205f9c48deb02e8cd.json  (+6 more)
.github/workflows/: cmake.yml
RelWithDebInfo/: imgui.lib
SLikeNet/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SLikeNet.vcxproj  SLikeNet.vcxproj.filters  cmake_install.cmake
SLikeNet/SLikeNet.dir/Debug/: SLikeNet.lib.recipe
SLikeNet/SLikeNet.dir/RelWithDebInfo/: SLikeNet.lib.recipe
SLikeNet/Source/src/: DataCompressor.cpp  RakPeer.cpp
game/: CMakeLists.txt  Centaur.bff  Common.h  GE.Basic-FixedPoint.ixx  GE.Basic-FixedPoint_InterestingMath.ixx  GE.Basic-Types.ixx  GE.Basic.Macro.defines.h  GE.Basic.ixx  GE.ImGui.cpp  GE.ImGui.defines.h  GE.ImGui.ixx  GE.Includes.h  GEShader.cpp  GEShader.h  GEShaderProgram.cpp  GEShaderProgram.h  GameCompute.cpp  GameCompute.h  GameGPUCompute.cpp  GameGPUCompute.h  GameGraphics.cpp  GameGraphics.h  GameNetworking.cpp  GameNetworking.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  glmHelpers.h  imgui.ini  intrinsics_gen.vcxproj  main.cpp  sublime.sublime-workspace
game/angelScript/: game.as
game/gameCode/: GE.Basic-FixedPoint.cpp  GE.Basic-FixedPoint.ixx  GE.Basic-Types.ixx  GE.Basic.Macro.defines.h  GE.Basic.ixx  GE.ImGui.cpp  GE.ImGui.defines.h  GE.ImGui.ixx  Game.CoreParam.Defines.h  Game.Graphics.ixx  Game.cpp  Game.ixx  gameBasicTypes.h  gameCodeCommon.h  netSyncStructs.h
game/openCL/: AStar.c  DotProduct.bc  Map.c  Peep.c  clCommon.h  clGUI.h  clGame.c  clGame.cl  clGuiStructs.h  clRayGUI.h  clRayGUI_IMP.h  clRayGUI_defines.h  clRayGUI_types.h  clString.h  cl_type_glue.h  common.h  cpu_gpu_structs.h  cpugpuvectortypes.h  fixedpoint_opencl.h  gpuvectortypes.h  guiState.h  oldcode.cl  peep.h  perlincl.h  sizeTests.h  test.bc  test.cl  test.ll  test.nvptx.s  test.spv
game/shaders/: fragMapTile.glsl  fragPeep.glsl  geomMapTile.glsl  geomMapTile.shad  guiFragShader.glsl  guiVertShader.glsl  vertShader.shad
game/tmp/: Game.cpp  GuiStructs.h  IMGUI.h  peep.h
imgui/: imgui.cpp
imgui.dir/RelWithDebInfo/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.h
opencltest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GEShader.h  GEShaderProgram.cpp  GEShaderProgram.h  GameGPUCompute.cpp  GameGPUCompute.h  GameGraphics.cpp  GameGraphics.h  GameNetworking.cpp  GameNetworking.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MinerTycoon.sln  MinerTycoon.vcxproj  MinerTycoon.vcxproj.filters  PeepFuncs.h  TileSet.pdn  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  clGame.c  clSizeTests.c  cl_type_glue.h  cmake_install.cmake  cpugpuvectortypes.h  dynamicDefines.h  fixedpoint_opencl.h  fragMapTile.shad  geomMapTile.shad  imgui.ini  jgjg.tsx  main.cpp  omp_gen.vcxproj  opencltest.sln  opencltest.vcxproj  opencltest.vcxproj.filters  peep.h  (+7 more)
opencltest/MinerTycoon.dir/RelWithDebInfo/: MinerTycoon.exe.recipe
opencltest/MinerTycoon.dir/RelWithDebInfo/MinerTycoon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
opencltest/opencltest.dir/RelWithDebInfo/: opencltest.exe.recipe
opencltest/opencltest.dir/RelWithDebInfo/opencltest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencltest.lastbuildstate
stb/: stb_image.h
sublimecmake/: CMakeLists.txt
zlib/: ALL_BUILD.vcxproj  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.h  zlib.pc  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
(+24 files in other folders)
